--- a/drivers/isdn/hardware/mISDN/Rules.mISDN.v2.4
+++ b/drivers/isdn/hardware/mISDN/Rules.mISDN.v2.4
@@ -61,3 +61,7 @@ I4LmISDN.o: $(I4LmISDN-objs)
 	$(LD) -r -o $@ $(filter-out $(MODVERFILE) dummy ,$^)
 
 endif
+
+mISDN_dsp.o: $(mISDN_dsp-objs)
+	$(RM) $@
+	$(LD) -r -o $@ $(filter-out $(MODVERFILE) dummy ,$^)
