add memory resource debug main use is to find memory and buffer leaks at the moment

--- a/drivers/isdn/hardware/mISDN/Kconfig.v2.6
+++ b/drivers/isdn/hardware/mISDN/Kconfig.v2.6
@@ -13,6 +13,15 @@ config MISDN_DRV
 
 if MISDN_DRV!=n
 
+config MISDN_MEMDEBUG
+	bool "Enable memory leak debug for mISDN"
+	help
+	  This option is for watching the use of several resources in mISDN.
+	  It includes extra code to maintain list of allocated memory and
+	  sk_buffs. On module unload you can see not freed resources an
+	  their allocation orging and some object specific informations.
+	  If unsure, say 'N'.
+
 config MISDN_AVM_FRITZ
 	bool "Support for AVM Fritz!Cards"
 	depends on PCI || ISA
