- first version of X25/X31 DTE protocol (ISO 8208)

--- a/drivers/isdn/hardware/mISDN/Rules.mISDN.v2.4
+++ b/drivers/isdn/hardware/mISDN/Rules.mISDN.v2.4
@@ -46,6 +46,10 @@ mISDN_l2.o: $(mISDN_l2-objs)
 	$(RM) $@
 	$(LD) -r -o $@ $(filter-out $(MODVERFILE) dummy ,$^)
 
+mISDN_x25dte.o: $(mISDN_x25dte-objs)
+	$(RM) $@
+	$(LD) -r -o $@ $(filter-out $(MODVERFILE) dummy ,$^)
+
 l3udss1.o: $(l3udss1-objs)
 	$(RM) $@
 	$(LD) -r -o $@ $(filter-out $(MODVERFILE) dummy ,$^)
