- move common functions to mISDN_core and export them - make it possible to compile into the kernel

--- a/drivers/isdn/hardware/mISDN/Kconfig.v2.6
+++ b/drivers/isdn/hardware/mISDN/Kconfig.v2.6
@@ -3,7 +3,7 @@
 #
 
 menu "Modular ISDN driver"
-	depends on NET && ISDN_BOOL && ISDN_CAPI!=n
+	depends on NET && ISDN && ISDN_CAPI!=n
 
 config MISDN_DRV
 	tristate "Support modular ISDN driver"
