add HFC multiport driver

--- a/drivers/isdn/Config.in.v2.4
+++ b/drivers/isdn/Config.in.v2.4
@@ -167,6 +167,7 @@ if [ "$CONFIG_MISDN_DRV" != "n" ]; then
    comment '  mISDN supported cards'
    bool '  AVM Fritz PCI and ISA PnP cards' CONFIG_MISDN_AVM_FRITZ
    bool '  Cologne Chip Design HFC PCI cards' CONFIG_MISDN_HFCPCI
+   bool '  Cologne Chip Design HFC multiport cards' CONFIG_MISDN_HFCMULTI
    bool '  Sedlbauer Speedfax + cards' CONFIG_MISDN_SPEEDFAX
    bool '  Winbond W6692 cards' CONFIG_MISDN_W6692
    comment '  mISDN supported features'
