Update of HFC multiport driver and dsp module. Ported to current api names. Many fixes, hardware support for dtmf, conferences, crossconnects. Blowfish crypt support for audio data (dsp). Changes to Kconfig, Makefile and Rules.mISDN. Minor changes to mISDNif.h.
Modified Files:
	mISDN/drivers/isdn/hardware/mISDN/Kconfig.v2.6
	mISDN/drivers/isdn/hardware/mISDN/Makefile
	mISDN/drivers/isdn/hardware/mISDN/Makefile.v2.4
	mISDN/drivers/isdn/hardware/mISDN/Makefile.v2.6
	mISDN/drivers/isdn/hardware/mISDN/Rules.mISDN.v2.4
	mISDN/drivers/isdn/hardware/mISDN/dsp.h
	mISDN/drivers/isdn/hardware/mISDN/dsp_audio.c
	mISDN/drivers/isdn/hardware/mISDN/dsp_cmx.c
	mISDN/drivers/isdn/hardware/mISDN/dsp_core.c
	mISDN/drivers/isdn/hardware/mISDN/dsp_dtmf.c
	mISDN/drivers/isdn/hardware/mISDN/dsp_tones.c
	mISDN/drivers/isdn/hardware/mISDN/hfc_multi.c
	mISDN/drivers/isdn/hardware/mISDN/hfc_multi.h
	mISDN/include/linux/mISDNif.h

--- a/drivers/isdn/hardware/mISDN/Kconfig.v2.6
+++ b/drivers/isdn/hardware/mISDN/Kconfig.v2.6
@@ -39,7 +39,7 @@ config MISDN_HFCMULTI
 	bool "Support for HFC multiport cards (HFC-4S/8S/E1)"
 	depends on PCI
 	help
-	  Enable support for card with Cologne Chips Design HFC multiport
+	  Enable support for card with Cologne Chip AG's HFC multiport
 	  chip. There are three types of chips that are quite similar,
 	  but the interface is different:
 	   * HFC-4S (4 S/T interfaces on one chip)
@@ -63,11 +63,26 @@ config MISDN_DSP
 	help
 	  Enable support for digital audio processing capability.
 	  This module may be used for special applications that require
-	  cross connecting of bchannels, conferencing, dtmf decoding and
-	  tone generation. It may use hardware features if available.
+	  cross connecting of bchannels, conferencing, dtmf decoding
+	  tone generation, and Blowfish encryption and decryption.
+	  It may use hardware features if available.
 	  E.g. it is required for PBX4Linux. Go to http://isdn.jolly.de
 	  and get more informations about this module and it's usage.
 	  If unsure, say 'N'.
+
+if MISDN_DSP!=n
+
+config MISDN_DSP_HARDWARETEST
+	bool "Hardware test for one HFC-4S/8S only"
+	depends on PCI
+	help
+	  This is a test option if ONLY ONE HFC-4S/8S card is installed
+	  and NO OTHER CARD is used by mISDN. In this case the DSP module
+	  uses the hardware crossconnect/dtmf/conference/tone features.
+	  Later this flag will be removed when mISDN supports stack
+	  feature lists.
+
+endif
 
 endif
 
