--- a/drivers/isdn/hardware/mISDN/Kconfig.v2.6
+++ b/drivers/isdn/hardware/mISDN/Kconfig.v2.6
@@ -85,7 +85,8 @@ config MISDN_DSP
 	  Enable support for digital audio processing capability.
 	  This module may be used for special applications that require
 	  cross connecting of bchannels, conferencing, dtmf decoding
-	  tone generation, and Blowfish encryption and decryption.
+	  echo cancelation, tone generation, and Blowfish encryption and
+	  decryption.
 	  It may use hardware features if available.
 	  E.g. it is required for PBX4Linux. Go to http://isdn.jolly.de
 	  and get more informations about this module and it's usage.
