--- a/drivers/isdn/hardware/mISDN/Kconfig.v2.6
+++ b/drivers/isdn/hardware/mISDN/Kconfig.v2.6
@@ -106,7 +106,7 @@ config MISDN_DSP
 	  echo cancelation, tone generation, and Blowfish encryption and
 	  decryption.
 	  It may use hardware features if available.
-	  E.g. it is required for PBX4Linux. Go to http://isdn.jolly.de
+	  E.g. it is required for PBX4Linux. Go to http://isdn.eversberg.eu
 	  and get more informations about this module and it's usage.
 	  If unsure, say 'N'.
 
@@ -118,7 +118,7 @@ config MISDN_LOOP
 	  bchannel data from user space. Applications can directly
 	  access bchannels, so applications can be integrated into DSP
 	  audio processing. 
-	  E.g. it is required for PBX4Linux. Go to http://isdn.jolly.de
+	  E.g. it is required for PBX4Linux. Go to http://isdn.eversberg.eu
 	  and get more informations about this module and it's usage.
 	  If unsure, say 'N'.
 
