Enabling TX data during bridge. Read note in dsp_cmx.c (search for "#if 1")
Modified Files:
 	mISDN/CHANGES mISDN/drivers/isdn/hardware/mISDN/dsp_cmx.c

--- a/CHANGES
+++ b/CHANGES
@@ -3,3 +3,4 @@ mISDN-1-1-2:
 	  voice frames where transceived on both legs (like when you transfer a call from SIP 2 ISDN)
 	- jollys mail has changed
 	- minor tweaks to misdn-init and to the Kernel-Patch script
+	- fix in CMX: sending is required even during PCM bridge, because sending data overrides bridging temporarily (for sending info tones during bridge)
